--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "Atom-Shell-Commands",
   "main": "./lib/atom-shell-commands",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A short description of your package",
-  "keywords": [
-  ],
+  "keywords": [],
   "homepage": "https://github.com/skywind3000/atom-shell-commands",
   "dependencies": {
     "win-spawn": "^2.0.0"
-  },  
+  },
   "activationCommands": {
     "atom-workspace": "atom-shell-commands:toggle"
   },
@@ -20,7 +19,6 @@
   "bugs": {
     "url": "https://github.com/skywind3000/atom-shell-commands/issues"
   },
-
   "_atomModuleCache": {
     "version": 1,
     "dependencies": [
