--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Atom-Shell-Commands",
+  "name": "atom-shell-commands",
   "version": "0.5.0",
   "description": "User defined shell commands for atom (based on atom-user-commands)",
   "main": "./lib/atom-shell-commands",
