--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "keywords": [
     "build",
     "command",
-    "parameters",
     "user",
     "run",
     "shell"
@@ -14,7 +13,11 @@
   "homepage": "https://github.com/skywind3000/atom-shell-commands",
   "dependencies": {
     "win-spawn": "^2.0.0"
+	"space-pen": "^4"
   },
+  "author": {
+  	"name": "skywind3000"
+  }
   "repository": "https://github.com/skywind3000/atom-shell-commands",
   "license": "MIT",
   "engines": {
