--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "homepage": "https://github.com/skywind3000/atom-shell-commands",
   "dependencies": {
-    "win-spawn": "^2.0.0"
+    "win-spawn": "^2.0.0",
 	"space-pen": "^4"
   },
   "author": {
