add xregexp module

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "homepage": "https://github.com/skywind3000/atom-shell-commands",
   "dependencies": {
     "win-spawn": "^2.0.0",
-    "space-pen": "^4"
+    "space-pen": "^4",
+	"xregexp": "^2.0.0"
   },
   "author": {
     "name": "skywind3000"
