--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atom-shell-commands",
   "version": "1.0.0",
-  "description": "Customize shell commands for atom. Similar to 'Shell Commands' in TextMate, 'User Tool' in EditPlus/UltraEdit, 'External Tool' in GEdit and 'Run Commands' in NotePad++. ",
+  "description": "Customize shell commands for atom. Similar to 'Run Commands' in NotePad++, 'Shell Commands' in TextMate, 'User Tool' in EditPlus/UltraEdit and 'External Tool' in GEdit" 
   "main": "./lib/atom-shell-commands",
   "keywords": [
     "build",
