--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "atom-shell-commands",
   "version": "1.1.10",
-  "description": "Customize shell commands for atom. Similar to 'Run Commands' in NotePad++, 'Shell Commands' in TextMate, 'User Tool' in EditPlus/UltraEdit and 'External Tool' in GEdit",
+  "description": "Customize shell commands. Similar to 'Run Commands' in NotePad++, 'Shell Commands' in TextMate, 'User Tool' in EditPlus/UltraEdit and 'External Tool' in GEdit",
   "main": "./lib/atom-shell-commands",
   "keywords": [
     "build",
     "compile",
     "make",
     "user",
-    "tool"
+    "tool",
+    "shell",
+    "command",
+    "project"
   ],
   "homepage": "https://github.com/skywind3000/atom-shell-commands",
   "dependencies": {
