--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atom-shell-commands",
   "version": "1.1.15",
-  "description": "Customize shell commands. Similar to 'Run Commands' in NotePad++, 'Shell Commands' in TextMate, 'User Tool' in EditPlus/UltraEdit and 'External Tool' in GEdit",
+  "description": "Customize shell commands. Similar to 'Run Commands' in NotePad++, 'User Tool' in EditPlus/UltraEdit, 'External Tool' in GEdit and 'Shell Commands' in TextMate.
   "main": "./lib/atom-shell-commands",
   "keywords": [
     "build",
